--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Welcome to Virtual Scanner’s documentation! &#8212; Virtual Scanner 1.0.0 documentation</title>
-    <link rel="stylesheet" href="./_static/classic.css" type="text/css" />
-    <link rel="stylesheet" href="./_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="_static/classic.css" type="text/css" />
+    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
